<resources>
    <string name="app_name">Home Thing</string>
    <string name="user_profile">Profile</string>
    <string name="permission_camera_rationale">Need Camera Promission for continue</string>
    <string name="button_allow">OK</string>
    <string name="button_deny">Deny</string>
    <string name="permission_camera_denied">Don\'t have permission</string>
    <string name="permission_camera_neverask">You check Never Ask Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="center_title">Smart Devices</string>
    <string name="smartswitchactivity">Smart Switch</string>
    <string name="smartswitchcontrolleractivity">Controller</string>
    <string name="scheduler">Scheduler</string>
    <string name="promission_wifi_denied">You denie application to access Wifi</string>
    <string name="promission_wifi_neverask">you never ask again</string>
    <string name="connect_smart_device_wifi">SmartDevice Wifi</string>
    <string name="authentication_wifi_error">Authentication Failed</string>
    <string name="Correct_password_wifi">Please correct password</string>
    <string name="setconnection_wifi_to_smartdevice">SmartDevice Wifi</string>
    <string name="next_setting">Next</string>
    <string name="setting_mod">Switch Control Mode</string>
    <string name="temp_monitor_title">Temperature</string>
    <string name="humi_monitor_title">Humidity</string>
    <string name="temp_and_humi_toolbar_title">Temp and Humi</string>
    <string name="gass_sensor_title">Gas Sensor</string>
    <string name="smart_slarm_title">Smart Alarm</string>
    <string name="no_device_item">No Device</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_edit">Edit</string>
    <string name="setting_time_dialog">Setting Time</string>

    <string name="setting_wifi_error">Can\'t Setting Wifi connection to Smart Device Successfully,please reset smart device and try again</string>
    <string name="setting_wifi_suucess">Setting Wifi connection to Smart Device Successfully, please reset smart device</string>
    <string name="dialog_edit_name">Edit Name</string>
    <string name="dialog_show_device_code">Device code</string>

    <string name="show_smartdevice_security_code">Device code is a important security, which it is allow someone else can use this smart device\n\n</string>
    <string name="fingerprint_label">you can use fingerprint to login</string>
    <string name="fingerprint_enable_label">Please Enable user Verifying with fingerprint</string>
    <string name="fingerprint_check_box_enanel">Enabel fingerprint to login</string>
    <string name="login_with_fingerprint_label">Place finger to access Homething</string>

</resources>
