<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_history_menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/menu_bottom_sheet_delete"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:drawableLeft="@android:drawable/ic_menu_delete"
        android:gravity="center_vertical"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/dialog_delete" />

    <TextView
        android:id="@+id/menu_bottom_sheet_edit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_gravity="center"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/dialog_edit" />

    <TextView
        android:id="@+id/menu_bottom_sheet_show_device_code"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_gravity="center"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:drawableLeft="@drawable/device_code"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/dialog_show_device_code" />


</LinearLayout>