<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xang.laothing.Activity.FingerPrintSettingActivity">

    <include layout="@layout/toolbar"/>


    <ScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#f1ecf1"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/fingerprint_label"
                android:textColor="@android:color/background_dark"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="82dp"
                android:layout_height="86dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:tint="@android:color/background_dark"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17"
                app:srcCompat="@drawable/ic_fingerprint_larg" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="#f1ecf1"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/fingerprint_enable_label"
                android:textSize="12sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <CheckBox
                android:id="@+id/checkBox_enabel_fingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="19dp"
                android:text="@string/fingerprint_check_box_enanel"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout_confirmpasswd"
                app:layout_constraintHorizontal_bias="0.158"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView20"
                app:layout_constraintVertical_bias="0.315" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_confirmpasswd"
                android:layout_width="297dp"
                android:layout_height="51dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="78dp"
                android:alpha="0.5"
                app:layout_constraintHorizontal_bias="0.518"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView20">

                <EditText
                    android:id="@+id/confirm_passwd_fingerprint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="textPassword"
                    android:hint="Confirm Password" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_save_setting_fingerprint"
                android:layout_width="279dp"
                android:layout_height="43dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/state_button_sign_in"
                android:text="Save"
                android:enabled="false"
                android:alpha="0.5"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_confirmpasswd"
                app:layout_constraintVertical_bias="0.554"
                tools:layout_editor_absoluteX="28dp"
                tools:layout_editor_absoluteY="410dp" />

        </android.support.constraint.ConstraintLayout>


    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
